Making text columns display as one column on mobile. Fixes #6.

--- a/assets/stylesheets/blocks.css
+++ b/assets/stylesheets/blocks.css
@@ -202,12 +202,21 @@ p.alignfull {
 .wp-block-button {}
 
 /* Text Columns */
-.wp-block-text-columns {}
-.wp-block-column {}
-.columns-1 {}
-.columns-2 {}
-.columns-3 {}
-.columns-4 {}
+@media only screen and ( max-width: 32em ) {
+	.wp-block-text-columns,
+	.wp-block-text-columns.aligncenter {
+		display: block;
+	}
+
+	.wp-block-text-columns.columns-2 .wp-block-column,
+	.wp-block-text-columns.columns-3 .wp-block-column,
+	.wp-block-text-columns.columns-4 .wp-block-column {
+		float: none;
+		margin-left: 0;
+		margin-right: 0;
+		width: 100%;
+	}
+}
 
 /* Latest Posts */
 .wp-block-latest-posts {}
